frontend/static/index.css
@font-face {
    font-family: 'Gotham';
    src: url('./fonts/subset-GothamBold.woff2') format('woff2'),
    url('./fonts/subset-GothamBold.woff') format('woff');
    font-weight: 700;
    font-style: bold;
}

body {
    background-color: rgba(105, 88, 130, 0.15);
}

.container {
    max-width: 85%;
}

.navbar {
    padding: 0;
    background-color: white; 
}

.container-fluid {
    padding-top: .75rem;
}

.navbar-brand {
    color: #24314b;
    padding-bottom: .75rem;
    padding-top: 0;
    font-size: 25px;
    line-height: 50px;
    vertical-align: auto;
    font-family: 'Montserrat', sans-serif;
}

.logo-text {
    margin-top: auto;
    margin-bottom: 0;
    display: inline-block;
}

.nav-link {
    color: #24314b;
    font-size: 25px;
    height: 100%;
    line-height: 75px;
    font-family: 'Montserrat', sans-serif;
}

#rules-link:hover {
    color: #f367f4;
    border-bottom: 5px solid #f367f4;
}

#registration-link:hover {
    color: #78f358;
    border-bottom: 5px solid #78f358;
}

#faq-link:hover {
    color: #8ff9fc;
    border-bottom: 5px solid #8ff9fc;
}

#archive-link:hover {
    color: #f0a147;
    border-bottom: 5px solid #f0a147;
}

.content {
    background-color: #ffffff;
    font-size: 20px;
    padding: 25px;
    height: 100%;
}

.header {
    display: block;
    color: #ffffff;
    background-color: #8E44AD;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    padding: 10px;
    width: 85%;
}

.content p {
    padding: 5px;
}

.content h1, h2 {
    display: block;
    background-color: #24314b;
    color: #ffffff;
    padding: 10px;
}

h1, h2, h3 {
    font-family: Gotham, sans-serif;
    font-weight: 700;
}

.center-image {
    margin-left: auto; 
    margin-right: auto; 
    display: block;
}

.footer {
    margin-bottom: 20px;
    padding: 20px;
}

.signup-link {
    background-color: white;
    padding: 10px;
    border-bottom: 30px solid #8E44AD;
}

.btn-lg {
    font-size: 18px;
}

.btn-ol {
    border: 3px solid white;
    border-radius: 0.3rem;
    color: white;
    background-color: #8e44ad;
    display: table-cell;
    vertical-align: middle;
    padding-left: auto;
    padding-right: auto;
}

.btn-ol-container {
    display: inline-block;
    margin-bottom: 20px;
}

.btn-ol:hover {
    background-color: white;
    color: #8e44ad;
}

